--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-* {
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css");
+
+* {  
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -21,6 +23,18 @@ body {
   background: #fff;
   padding: 15px 0;
   box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease;
+  z-index: 900;
+}
+
+.site-header.hide {
+  transform: translateY(-100%);
 }
 
 .site-header .container {
@@ -39,6 +53,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .nav-left .nav-list a {
   text-decoration: none;
   color: #333;
@@ -72,9 +87,6 @@ body {
 .icon-btn:hover {
   color: #000;
 }
-
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css");
-
     
 .hero-banner {
   background-image: url('img/banner.jpg');
@@ -331,7 +343,7 @@ body {
   margin: 5px 0;
 }
 
-button {
+.product button {
   background-color: #333;
   color: white;
   padding: 10px 20px;
@@ -339,6 +351,10 @@ button {
   border-radius: 25px;
   cursor: pointer;
   margin-top: 10px;
+}
+
+.cart {
+  margin-top: 60px;
 }
 
 button:hover {
@@ -360,7 +376,6 @@ button:hover {
   background-color: #2c2a2a;
   color: white;
   text-align: center;
-  padding: 30px 15px;
   padding: 80px;
 }
 
@@ -418,74 +433,145 @@ button:hover {
     text-align: center;
   }
 
-  .nav-left,
-  .nav-right {
+  .nav-left{
     display: none;
   }
 
   .logo img {
     max-width: 120px;
+    margin: auto;
+  }
+
+  .logo{
+    width: 40px;
+    height: 40px;
+    margin: auto;
+  }
+  
+  .nav-right {
+    position: absolute;
+    top: 27px;
   }
 
   #burger {
     display: block;
     font-size: 28px;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    left: 30px;
+    top: 25px;
     color: #333;
     background: none;
     border: none;
     cursor: pointer;
     z-index: 1100;
+    transition: 0.3s;
   }
 
-  .mobile-nav {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background: #fff;
-    z-index: 1000;
-    border-top: 1px solid #ccc;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  .sale-badge{
+    margin-left: 5px;
   }
 
-  .mobile-nav.active {
-    display: block;
-  }
-
-  .mobile-nav ul {
-    list-style: none;
-    padding: 10px 0;
-    margin: 0;
-  }
-
-  .mobile-nav ul li {
-    padding: 10px 0;
-  }
-
-  .mobile-nav ul li a {
-    color: #000;
-    text-decoration: none;
-    font-size: 18px;
-    display: block;
+  .out-stock {
+    margin-left: 65px;
   }
 
   .products-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    display: grid;
+    gap: 15px;
   }
 
   .products {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    display: grid;
+    gap: 15px;
   }
 
+  .product-card,
   .product {
     width: 100%;
+    margin: 0;
   }
+
+.mobile-nav {
+  position: fixed;
+  top: 70px;
+  left: -100%;
+  width: 100%;
+  height: calc(100vh - 60px);
+  background: white;
+  z-index: 1000;
+  transition: left 0.3s ease;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mobile-footer {
+  position: absolute;
+  bottom: 50px;
+}
+
+#instagram{
+  color: #000;
+}
+
+#tiktok{
+  color: #000;
+}
+
+.mobile-nav.active {
+  left: 0;
+}
+
+.mobile-nav-overlay {
+  position: fixed;
+  top: 75px;
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 60px);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+
+.mobile-nav-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.mobile-nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.body.noscroll {
+  overflow: hidden;
+  position: fixed;
+}
+
+.mobile-nav ul li {
+  margin-bottom: 24px;
+}
+
+.mobile-nav ul li a {
+  text-decoration: none;
+  font-size: 20px;
+  margin-bottom: 24px;
+  color: #000;
+}
+
+.mobile-footer {
+  display: flex;
+  gap: 20px;
+  font-size: 24px;
+}
+
+body.noscroll {
+  overflow: hidden;
+}
 
   .hero-content h1 {
     font-size: 24px;
@@ -502,12 +588,17 @@ button:hover {
 
   .shop-button,
   .shop-button2 {
-    width: 100%;
-    text-align: center;
+    left: 0;
+    top: 20px;
+    margin: 10px auto;
     display: block;
-    margin: 20px auto;
-    padding: 12px;
-    font-size: 16px;
+    width: fit-content;
+  }
+
+  .per h1,
+  .per p {
+    margin-left: 0;
+    text-align: center;
   }
 
   .footer {
